--- a/src/app/pages/users/list/users.component.html
+++ b/src/app/pages/users/list/users.component.html
@@ -26,18 +26,20 @@
                       <table show-filter="true" class="table">
                         <thead>
                         <tr>
-                          <th>ID</th>
                           <th>Username</th>
                           <th>Operations</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr  *ngFor="let u of users |filter: searchText | paginate: { itemsPerPage: 6, currentPage: p}">
-                          <td>{{u.id}}</td>
                           <td>{{u.username}}</td>
                           <td>
-                            <button type="button" class="btn btn-success btn-raised" (click)="onUpdateUser(u.id)">update </button>
-                            <button type="button" class="btn btn-danger btn-raised"  (click)="onDeleteUser(u)">Delete </button>
+                            <a class="success p-0" data-original-title="" title="" (click)="onUpdateUser(u.id)">
+                              <i class="ft-edit-2 font-medium-3 mr-2"></i>
+                            </a>
+                            <a class="danger" data-original-title="" title="" (click)="onDeleteUser(u)">
+                              <i class="ft-trash font-medium-3"></i>
+                            </a>
                           </td>
                         </tr>
                         <pagination-controls (pageChange)="p = $event"></pagination-controls>
