--- a/src/app/pages/users/update/update.component.html
+++ b/src/app/pages/users/update/update.component.html
@@ -12,7 +12,7 @@
             <div class="col-sm-12">
               <div class="card">
                 <div class="card-header">
-                  <h4 class="card-title">Add New User </h4>
+                  <h4 class="card-title">update User: {{user.username}} </h4>
                 </div>
                 <div class="card-body">
                   <div class="card-block">
@@ -22,6 +22,12 @@
                       <input class="form-control" type="text" [(ngModel)]="user.username"  required/>
                     </div>
                     <br>
+                    <div class="form-group">
+                      <label class="control-label">Role:</label>
+                      <select  class="form-control" [(ngModel)]="roleName" name="role">
+                        <option *ngFor="let r of roles" [ngValue]="r">{{r.roleName}}</option>
+                      </select>
+                    </div>
                     <div class="form-group">
                       <label class="control-label">Password</label>
                       <input class="form-control"  [(ngModel)]="user.password" type="password" required/>
@@ -44,4 +50,4 @@
     </div>
     <app-footer></app-footer>
   </div>
-
+</div>
