--- a/src/app/pages/events/update-event/update-event.component.html
+++ b/src/app/pages/events/update-event/update-event.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper" xmlns:date="http://www.w3.org/1999/xhtml">
   <div class="app-sidebar" data-active-color="white" data-background-color="black" data-image="assets/img/sidebar-bg/01.jpg">
     <app-sidebar></app-sidebar>
     <div class="sidebar-background"></div>
@@ -19,10 +19,10 @@
                     <!-- formumaire update starts-->
                     <input class="form-control" [(ngModel)]="event.title" type="text" placeholder="Event Name" required/>
                     <br>
-                    <input  class="form-control" [owlDateTimeTrigger]="dt1"  [(ngModel)]="event.startDate" [owlDateTime]="dt1" placeholder="Start Date" >
+                    <input  class="form-control" [owlDateTimeTrigger]="dt1"  [(ngModel)]="event.startDate" [owlDateTime]="dt1" placeholder="{{event.startDate | date:'yyyy-MM-dd HH:mm a'}}" required>
                     <owl-date-time #dt1></owl-date-time>
                     <br>
-                    <input  class="form-control" [owlDateTimeTrigger]="dt2" [(ngModel)]="event.endDate"  [owlDateTime]="dt2" placeholder="End Date">
+                    <input  class="form-control" [owlDateTimeTrigger]="dt2" [(ngModel)]="event.endDate"  [owlDateTime]="dt2" placeholder="{{event.endDate | date:'yyyy-MM-dd HH:mm a'}}" required>
                     <owl-date-time #dt2></owl-date-time>
                     <br>
                     <button class="btn btn-success" (click)="update()" >Save </button>
@@ -38,4 +38,4 @@
     </div>
     <app-footer></app-footer>
   </div>
-
+</div>
