--- a/src/app/pages/videos/update-video/update-video.component.html
+++ b/src/app/pages/videos/update-video/update-video.component.html
@@ -26,14 +26,16 @@
                           </div>
                           <div class="form-group">
                             <label class="control-label">URL: </label>
-                            <input class="form-control"[(ngModel)]="video.url"  type="text" name="url" #url="ngModel" url required/>
+                            <input class="form-control" [(ngModel)]="video.url" type="text" name="url" #url="ngModel" url required/>
+                            <p class="alert alert-danger" *ngIf="url?.errors?.url">Enter a valid url</p>
                           </div>
                           <div class="form-group">
                             <label class="control-label">Description:</label>
                             <textarea class="form-control" [(ngModel)]="video.description"  type="text" name="description" required></textarea>
                           </div>
                           <div class="form-group">
-                            <button type="button"  data-dismiss="modal" class="btn btn-success" (click)="updateVideo()" >Submit</button>
+                            <button type="button"  data-dismiss="modal" class="btn btn-success" (click)="updateVideo()" [disabled]="url?.errors?.url">Submit</button>
+
                             <button type="button" class="btn btn-danger" (click)="close()">Close</button>
                           </div>
                       </div>
