--- a/src/app/pages/events/list/events.component.html
+++ b/src/app/pages/events/list/events.component.html
@@ -20,7 +20,7 @@
                     <!--List Events Start-->
                     <input type="text" [(ngModel)]="searchText" name="searchText" placeholder="Search...">
                     <hr>
-                    <button type="button" class="btn btn-primary btn-sm" (click)="newEvent()" >New Event</button>
+                    <button type="button" class="btn btn-primary" (click)="newEvent()" >New Event</button>
                     <table show-filter="true" class="table">
                       <thead>
                       <tr>
