--- a/src/app/pages/users/update/update.component.html
+++ b/src/app/pages/users/update/update.component.html
@@ -1,5 +1,6 @@
 <div class="wrapper">
-  <div class="app-sidebar" data-active-color="white" data-background-color="black" data-image="assets/img/sidebar-bg/01.jpg">
+  <div class="app-sidebar" data-active-color="white" data-background-color="black"
+       data-image="assets/img/sidebar-bg/01.jpg">
     <app-sidebar></app-sidebar>
     <div class="sidebar-background"></div>
   </div>
@@ -19,26 +20,31 @@
                     <!-- formumaire update starts-->
                     <div>
                       <label class="control-label">Username</label>
-                      <input class="form-control" type="text" [(ngModel)]="user.username"  required/>
+                      <input class="form-control" type="text" [(ngModel)]="user.username" required/>
                     </div>
                     <br>
                     <div class="form-group">
                       <label class="control-label">Role:</label>
-                      <select  class="form-control" [(ngModel)]="roleName" name="role">
-                        <option *ngFor="let r of roles" [ngValue]="r">{{r.roleName}}</option>
+                      {{roleName}}
+                      <select class="form-control" [(ngModel)]="roleValue" name="role" (change)="changeRole()">
+                        <option *ngFor="let r of roles" [ngValue]="r">
+                          {{r.roleName}}
+                        </option>
                       </select>
                     </div>
                     <div class="form-group">
                       <label class="control-label">Password</label>
-                      <input class="form-control"  [(ngModel)]="user.password" type="password" required/>
+                      <input class="form-control" [(ngModel)]="user.password" type="password" required/>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label">Repassword</label>
-                      <input class="form-control"   [(ngModel)]="user.repassword" type="password" name="repassword" required/>
+                      <input class="form-control" [(ngModel)]="user.repassword" type="password" name="repassword"
+                             required/>
                     </div>
-                    <button class="btn btn-success" (click)="updateUser()" >Save </button>
-                    <button  (click)="OnCancel()" class="btn btn-danger" value="Submit">Cancel</button>
+
+                    <button class="btn btn-success" (click)="updateUser()">Save</button>
+                    <button (click)="OnCancel()" class="btn btn-danger" value="Submit">Cancel</button>
                     <!-- formumaire update starts-->
                   </div>
                 </div>
