--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                   <li>
-                    Welcome {{username}}
+                    Welcome {{username}}  || {{role}}
                   </li>
                     <li class="nav-item mr-2">
                         <a href="javascript:;" class="nav-link" appToggleFullscreen>
