--- a/src/app/pages/quiz/quiz-test/add-quiz/add-quiz.component.html
+++ b/src/app/pages/quiz/quiz-test/add-quiz/add-quiz.component.html
@@ -26,8 +26,40 @@
                           <select  class="form-control" [(ngModel)]="ModuleName" name="module">
                             <option *ngFor="let m of modules" [ngValue]="m">{{m.nom}}</option>
                           </select>
+                          <br>
+                          <label class="control-label">Question:</label>
+                          <input class="form-control"ngModel="" type="text" name="questionName" placeholder="Question Name" required/>
+                          <br>
+                          <label class="control-label">Answer:</label>
+                          <hr>
+                          <input class="form-control" ngModel="" type="text" name="choice1"  placeholder="Answer option 1" required/>
+                          <br>
+                          <label class="container"> Correct answer
+                            <input type="checkbox" [(ngModel)]="isChecked1"  name="checkbox1" value="true">
+                            <span class="checkmark"></span>
+                          </label><br/>
+
+                          <input class="form-control" ngModel="" type="text" name="choice2"  placeholder="Answer option 2" required/>
+                          <br>
+                          <label  class="container">Correct answer
+                            <input type="checkbox" [(ngModel)]="isChecked2"  name="checkbox2" value="true">
+                            <span class="checkmark"></span>
+                          </label><br/>
+
+                          <input class="form-control" ngModel="" type="text" name="choice3"  placeholder="Answer option 3" required/>
+                          <br>
+                          <label  class="container">Correct answer
+                            <input type="checkbox" [(ngModel)]="isChecked3"  name="checkbox3" value="true">
+                            <span class="checkmark"></span>
+                          </label><br/>
+
+                          <input class="form-control" ngModel="" type="text" name="choice4"  placeholder="Answer option 1" required/>
+                          <br>
+                          <label  class="container">Correct answer
+                            <input type="checkbox" [(ngModel)]="isChecked4"  name="checkbox4" value="true">
+                            <span class="checkmark"></span>
+                          </label><br/>
                         </div>
-                        <input class="form-control" ngModel="" type="text" name="questionName"  placeholder="Question Name" required/>
                         <br>
                         <br>
                         <button [disabled]="!f.valid"  type="submit" class="btn btn-primary">Save</button>
