--- a/src/app/pages/pass-quiz/pass-quiz.component.scss
+++ b/src/app/pages/pass-quiz/pass-quiz.component.scss
@@ -1,7 +1,7 @@
 h1 {
-  color: #57acec;
-  margin-top: 24px;
-  text-align: center;
+  color: #ec2959;
+  text-align: right;
+  font-size : x-large;
 }
 .btn-success {
   color: #fff !important;
